--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
 Hi there,
 
-This page belongs to Alireza Fazeli which is currently under construction.
+This page is currently under construction.
 
 Thanks for visiting!
-
+A. Fazeli
