--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 Hi there,
 
-This page is currently under construction.
+This page is currently under construction. For the meanwhile, you can visit the following pages:
+
+https://softsimu.net/
+https://www.researchgate.net/profile/Alireza_Fazeli3
+https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en
 
 Thanks for visiting!
-A. Fazeli
+Alireza Fazeli
