--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-Hi there,
+<p>Hi there,</p>
 
-This page is currently under construction. For the meanwhile, you can visit the following pages:
+<p>This page is currently under construction. For the meanwhile, you can visit the following pages:</p>
 
-https://softsimu.net/
-https://www.researchgate.net/profile/Alireza_Fazeli3
-https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en
+<p>https://softsimu.net/</p>
+<p>https://www.researchgate.net/profile/Alireza_Fazeli3</p>
+<p>https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en</p>
 
-Thanks for visiting!
-Alireza Fazeli
+<p>Thanks for visiting!</p>
+<p>Alireza Fazeli</p>
