--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <p>Hi there,</p>
 
-<p>This page is currently under construction. For the meanwhile, you can visit the following pages:</p>
-
-<p>https://softsimu.net/</p>
-<p>https://www.researchgate.net/profile/Alireza_Fazeli3</p>
-<p>https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en</p>
-
+<p>This page is currently under construction. For the meanwhile, you may visit the following pages:</p>
+<p> </p>
+<p>   https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en</p>
+<p>   https://www.researchgate.net/profile/Alireza_Fazeli3</p>
+<p>   https://softsimu.net/</p>
+<p> </p>
 <p>Thanks for visiting!</p>
 <p>Alireza Fazeli</p>
