--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 
 <p>This page is currently under construction. For the meanwhile, you may visit the following pages:</p>
 
-<a href="https://DIGITAL.COM">Review 
-  Squirrel</a>
+<a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a>
+<a href="https://www.researchgate.net/profile/Alireza_Fazeli3">Researchgate</a>
+<a href="https://softsimu.net/">SoftSimu</a>
 
-<p>   https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en</p>
-<p>   https://www.researchgate.net/profile/Alireza_Fazeli3</p>
-<p>   https://softsimu.net/</p>
 
 <p>Thanks for visiting!</p>
 <p>Alireza Fazeli</p>
