--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <p>This page is currently under construction. For the meanwhile, you may visit the following pages:</p>
 
-<a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a>
-<a href="https://www.researchgate.net/profile/Alireza_Fazeli3">Researchgate</a>
-<a href="https://softsimu.net/">SoftSimu</a>
+<p><a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a></p>
+<p><a href="https://www.researchgate.net/profile/Alireza_Fazeli3">Researchgate</a></p>
+<p><a href="https://softsimu.net/">SoftSimu</a></p>
 
 
 <p>Thanks for visiting!</p>
