--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <p>Thanks for visiting!</p>
 <p>Alireza Fazeli</p>
 
-<div https://www.youracclaim.com/badges/a8a80a22-9ed8-45df-9a03-063659524071/public_url></script>
+<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a8a80a22-9ed8-45df-9a03-063659524071" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="2ebcf078-d0eb-48cb-8886-deca20681e22" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
