--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
 
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a8a80a22-9ed8-45df-9a03-063659524071" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="2ebcf078-d0eb-48cb-8886-deca20681e22" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="alireza-fazeli"><a class="LI-simple-link" href='https://ca.linkedin.com/in/alireza-fazeli?trk=profile-badge'>Alireza Fazeli</a></div>
