--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <p>Hi there,</p>
 
 <p>This page is currently under construction. For the meanwhile, you may visit the following pages:</p>
+<pre> 
+ 
+<a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a>
+<a href="https://www.researchgate.net/profile/Alireza_Fazeli3">ResearchGate</a>
+<a href="https://softsimu.net/">SoftSimu</a>
+<a href="https://github.com/faazeli">GitHub</a>
 
-<p><a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a></p>
-<p><a href="https://www.researchgate.net/profile/Alireza_Fazeli3">ResearchGate</a></p>
-<p><a href="https://softsimu.net/">SoftSimu</a></p>
-<p><a href="https://github.com/faazeli">GitHub</a></p>
-<p>
-<p>Thanks for visiting!</p>
-
+Thanks for visiting!
+</pre>
 <!--
 <p>Alireza Fazeli</p>
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a8a80a22-9ed8-45df-9a03-063659524071" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
