--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <a href="https://softsimu.net/">SoftSimu</a>
 <a href="https://github.com/faazeli">GitHub</a>
 
-Thanks for visiting!
 </pre>
+<p>Thanks for visiting!</p>
+
 <!--
 <p>Alireza Fazeli</p>
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a8a80a22-9ed8-45df-9a03-063659524071" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
