--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <p>Hi there,</p>
 
 <p>This page is currently under construction. For the meanwhile, you may visit the following pages:</p>
-<pre> 
-<a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a>
-<a href="https://www.researchgate.net/profile/Alireza_Fazeli3">ResearchGate</a>
-<a href="https://softsimu.net/">SoftSimu</a>
-<a href="https://github.com/faazeli">GitHub</a>
 
-</pre>
+<p><a href="https://scholar.google.com/citations?user=3AzQN7UAAAAJ&hl=en">Google Scholar</a></p>
+<p><a href="https://www.researchgate.net/profile/Alireza_Fazeli3">ResearchGate</a></p>
+<p><a href="https://softsimu.net/">SoftSimu</a></p>
+<p><a href="https://github.com/faazeli">GitHub</a></p>
+
 <p>Thanks for visiting!</p>
 
 <!--
